# inori-mpd

./: Cargo.toml  README.md
src/: client.rs  idle.rs  lib.rs  proto.rs  search.rs
