[package]
authors = ["Konstantin Stepanov <me@kstep.me>", "esrh"]
description = "fork of rust-mpd with extra features used in the inori client"
homepage = "https://github.com/eshrh/rust-mpd"
license = "Unlicense"
name = "inori-mpd"
repository = "https://github.com/eshrh/inori-mpd.git"
version = "0.2.0"
edition = "2018"

[dependencies]
bufstream = { version = "0.1", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_repr = { version = "0.1", optional = true }
dirs = "5.0.1"
itertools = "0.13.0"

[dev-dependencies]
tempfile = "3.8.1"

[features]
serde = ["dep:serde", "dep:serde_repr"]
